tests/ui/resolve/resolve-issue-135614-assoc-const.import_trait_associated_functions.stderr
error[E0005]: refutable pattern in local binding
  --> $DIR/resolve-issue-135614-assoc-const.rs:21:9
   |
LL |     let DEFAULT: u32 = 0;
   |         ^^^^^^^ pattern `1_u32..=u32::MAX` not covered
LL |     const DEFAULT: u32 = 0;
   |     ------------------ missing patterns are not covered because `DEFAULT` is interpreted as a constant pattern, not a new variable
   |
   = note: `let` bindings require an "irrefutable pattern", like a `struct` or an `enum` with only one variant
   = note: for more information, visit https://doc.rust-lang.org/book/ch19-02-refutability.html
   = note: the matched value is of type `u32`
help: introduce a variable instead
   |
LL |     let DEFAULT_var: u32 = 0;
   |                ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0005`.
